Update asf-site to output generated at 3715af1

--- a/ecosystem/index.html
+++ b/ecosystem/index.html
@@ -450,7 +450,7 @@ if (!doNotTrack) {
 
 <h2 id="airflow-as-a-service">Airflow-As-A-Service</h2>
 
-<p><a href="https://www.astronomer.io/" target="_blank">Astronomer</a> - Managed Apache Airflow service on Astronomer Cloud</p>
+<p><a href="https://www.astronomer.io/" target="_blank">Astronomer</a> - Managed Apache Airflow in Astronomer Cloud, or self-hosted within your environment</p>
 
 <p><a href="https://cloud.google.com/composer" target="_blank">Google Cloud Composer</a> - Managed Apache Airflow service on Google Cloud Platform</p>
 
