Update asf-site to output generated at 22af1a2

--- a/ecosystem/index.html
+++ b/ecosystem/index.html
@@ -460,6 +460,8 @@ if (!doNotTrack) {
 
 <h2 id="tools-integrating-with-airflow">Tools integrating with Airflow</h2>
 
+<p><a href="https://geniumcloud.com" target="_blank">GeniumCloud</a> - One-Stop-Shop Platform for rapid build, scheduling and control Airflow workflows via completely new UI. Out of the box comprehensive Airflow infrastructure monitoring, integration with alerting systems and service adoption from small to enterprise organizations. The easiest way to manage complex workflows.</p>
+
 <p><a href="https://github.com/GoogleCloudPlatform/oozie-to-airflow" target="_blank">Oozie to Airflow</a> - A tool to easily convert between <a href="http://oozie.apache.org/" target="_blank">Apache Oozie</a> workflows and Apache Airflow workflows.</p>
 
 <p><a href="https://github.com/Barski-lab/cwl-airflow" target="_blank">CWL-Airflow</a> - Python package to extend Apache-Airflow 1.10.11 functionality with CWL v1.2 support.</p>
