Update asf-site to output generated at feddda3

--- a/ecosystem/index.html
+++ b/ecosystem/index.html
@@ -460,43 +460,43 @@ if (!doNotTrack) {
 
 <h2 id="tools-integrating-with-airflow">Tools integrating with Airflow</h2>
 
-<p><a href="https://geniumcloud.com" target="_blank">GeniumCloud</a> - One-Stop-Shop Platform for rapid build, scheduling and control Airflow workflows via completely new UI. Out of the box comprehensive Airflow infrastructure monitoring, integration with alerting systems and service adoption from small to enterprise organizations. The easiest way to manage complex workflows.</p>
-
-<p><a href="https://github.com/GoogleCloudPlatform/oozie-to-airflow" target="_blank">Oozie to Airflow</a> - A tool to easily convert between <a href="http://oozie.apache.org/" target="_blank">Apache Oozie</a> workflows and Apache Airflow workflows.</p>
-
-<p><a href="https://github.com/Barski-lab/cwl-airflow" target="_blank">CWL-Airflow</a> - Python package to extend Apache-Airflow 1.10.11 functionality with CWL v1.2 support.</p>
-
-<p><a href="https://databand.ai/" target="_blank">Databand</a> - Observability platform built on top of Airflow.</p>
-
-<p><a href="https://github.com/trejas/chartis" target="_blank">Chartis</a> - Python package to convert Common Workflow Language (CWL) into Airflow DAG.</p>
-
-<p><a href="https://docs.getdbt.com/" target="_blank">dbt (data build tool)</a> - Data transformation tool, <a href="https://docs.getdbt.com/docs/running-a-dbt-project/running-dbt-in-production/#using-airflow" target="_blank">dbt jobs can be scheduled using Airflow</a>.</p>
-
-<p><a href="https://github.com/airflow-plugins/" target="_blank">Airflow plugins</a> - Central collection of repositories of various plugins for Airflow, including mailchimp, trello, sftp, GitHub, etc.</p>
-
-<p><a href="https://github.com/teamclairvoyant/airflow-maintenance-dags" target="_blank">airflow-maintenance-dags</a> - <a href="https://clairvoyantsoft.com/" target="_blank">Clairvoyant</a> has a repo of Airflow DAGs that operator on Airflow itself, clearing out various bits of the backing metadata store.</p>
-
-<p><a href="https://github.com/godatadriven/whirl" target="_blank">whirl</a> - Fast iterative local development and testing of Apache Airflow workflows.</p>
-
-<p><a href="https://github.com/ajbosco/dag-factory" target="_blank">dag-factory</a> - A library for dynamically generating Apache Airflow DAGs from YAML configuration files.</p>
+<p><a href="https://github.com/qubole/afctl" target="_blank">afctl</a> - A CLI tool that includes everything required to create, manage and deploy airflow projects faster and smoother.</p>
 
 <p><a href="https://github.com/andreax79/airflow-code-editor" target="_blank">airflow-code-editor</a> - A plugin for Apache Airflow that allows you to edit DAGs in browser.</p>
 
-<p><a href="https://github.com/BasPH/pylint-airflow" target="_blank">Pylint-Airflow</a> - A Pylint plugin for static code analysis on Airflow code.</p>
+<p><a href="https://github.com/feluelle/airflow-diagrams" target="_blank">airflow-diagrams</a> - Auto-generated Diagrams from Airflow DAGs</p>
 
-<p><a href="https://github.com/qubole/afctl" target="_blank">afctl</a> - A CLI tool that includes everything required to create, manage and deploy airflow projects faster and smoother.</p>
-
-<p><a href="https://github.com/ms32035/airflow-dag-dependencies" target="_blank">Dag Dependencies viewer</a> - A plugin which creates a view to visualize dependencies between the Airflow DAGs</p>
-
-<p><a href="https://github.com/asandeep/airflow-ecr-plugin" target="_blank">Airflow ECR Plugin</a> - Plugin to refresh AWS ECR login token at regular intervals. This is helpful where DockerOperator needs to pull images hosted on ECR.</p>
+<p><a href="https://github.com/teamclairvoyant/airflow-maintenance-dags" target="_blank">airflow-maintenance-dags</a> - <a href="https://clairvoyantsoft.com/" target="_blank">Clairvoyant</a> has a repo of Airflow DAGs that operator on Airflow itself, clearing out various bits of the backing metadata store.</p>
 
 <p><a href="https://github.com/Javier162380/AirflowKuberentesDebugger" target="_blank">AirflowK8sDebugger</a> - A library for generate k8s pod yaml templates from an Airflow dag using the KubernetesPodOperator.</p>
 
 <p><a href="https://github.com/angadsingh/airflow-ditto" target="_blank">Airflow Ditto</a> - An extensible framework to do transformations to an Airflow DAG and convert it into another DAG which is flow-isomorphic with the original DAG, to be able to run it on different environments (e.g. on different clouds, or even different container frameworks - Apache Spark on YARN vs Kubernetes). Comes with out-of-the-box support for EMR-to-HDInsight-DAG transforms.</p>
 
+<p><a href="https://github.com/asandeep/airflow-ecr-plugin" target="_blank">Airflow ECR Plugin</a> - Plugin to refresh AWS ECR login token at regular intervals. This is helpful where DockerOperator needs to pull images hosted on ECR.</p>
+
+<p><a href="https://github.com/airflow-plugins/" target="_blank">Airflow Plugins</a> - Central collection of repositories of various plugins for Airflow, including mailchimp, trello, sftp, GitHub, etc.</p>
+
+<p><a href="https://github.com/trejas/chartis" target="_blank">Chartis</a> - Python package to convert Common Workflow Language (CWL) into Airflow DAG.</p>
+
+<p><a href="https://github.com/Barski-lab/cwl-airflow" target="_blank">CWL-Airflow</a> - Python package to extend Apache-Airflow 1.10.11 functionality with CWL v1.2 support.</p>
+
+<p><a href="https://github.com/ajbosco/dag-factory" target="_blank">dag-factory</a> - A library for dynamically generating Apache Airflow DAGs from YAML configuration files.</p>
+
+<p><a href="https://github.com/ms32035/airflow-dag-dependencies" target="_blank">Dag Dependencies viewer</a> - A plugin which creates a view to visualize dependencies between the Airflow DAGs</p>
+
+<p><a href="https://databand.ai/" target="_blank">Databand</a> - Observability platform built on top of Airflow.</p>
+
+<p><a href="https://docs.getdbt.com/" target="_blank">dbt (data build tool)</a> - Data transformation tool, <a href="https://docs.getdbt.com/docs/running-a-dbt-project/running-dbt-in-production/#using-airflow" target="_blank">dbt jobs can be scheduled using Airflow</a>.</p>
+
+<p><a href="https://geniumcloud.com" target="_blank">GeniumCloud</a> - One-Stop-Shop Platform for rapid build, scheduling and control Airflow workflows via completely new UI. Out of the box comprehensive Airflow infrastructure monitoring, integration with alerting systems and service adoption from small to enterprise organizations. The easiest way to manage complex workflows.</p>
+
 <p><a href="https://github.com/chriscardillo/gusty" target="_blank">gusty</a> - Package that allows for the creation of DAGs using YAML files for each job in a DAG. Includes support for dependencies and more. A fully containerized demo is available <a href="https://github.com/chriscardillo/gusty-demo" target="_blank">here</a>.</p>
 
-<p><a href="https://github.com/feluelle/airflow-diagrams" target="_blank">airflow-diagrams</a> - Auto-generated Diagrams from Airflow DAGs</p>
+<p><a href="https://github.com/GoogleCloudPlatform/oozie-to-airflow" target="_blank">Oozie to Airflow</a> - A tool to easily convert between <a href="http://oozie.apache.org/" target="_blank">Apache Oozie</a> workflows and Apache Airflow workflows.</p>
+
+<p><a href="https://github.com/BasPH/pylint-airflow" target="_blank">Pylint-Airflow</a> - A Pylint plugin for static code analysis on Airflow code.</p>
+
+<p><a href="https://github.com/godatadriven/whirl" target="_blank">whirl</a> - Fast iterative local development and testing of Apache Airflow workflows.</p>
 
 
 
