Update asf-site to output generated at b966fdd

--- a/announcements/index.html
+++ b/announcements/index.html
@@ -429,6 +429,24 @@ if (!doNotTrack) {
 
 <p><strong>Note:</strong> Follow <a href="https://twitter.com/ApacheAirflow" target="_blank">@ApacheAirflow</a> on Twitter for the latest news and announcements!</p>
 
+<h1 id="october-6-2020">October 6, 2020</h1>
+
+<p>We&rsquo;ve just released Airflow Backport Provider Packages 2020.10.5.</p>
+
+<p>57 packages have been released.</p>
+
+<h1 id="august-25-2020">August 25, 2020</h1>
+
+<p>We&rsquo;ve just released Airflow v1.10.12</p>
+
+<p>PyPI - <a href="https://pypi.org/project/apache-airflow/1.10.12/" target="_blank">https://pypi.org/project/apache-airflow/1.10.12/</a></p>
+
+<p>Docs - <a href="https://airflow.apache.org/docs/1.10.12/" target="_blank">https://airflow.apache.org/docs/1.10.12/</a></p>
+
+<p>ChangeLog - <a href="https://airflow.apache.org/docs/1.10.12/changelog.html" target="_blank">https://airflow.apache.org/docs/1.10.12/changelog.html</a></p>
+
+<p>113 commits since 1.10.10 (5 New Features, 23 Improvements, 23 Bug Fixes, and 14 doc changes)</p>
+
 <h1 id="july-20-2020">July 20, 2020</h1>
 
 <p>Airflow PMC welcomes <strong>Leah Cole</strong> (<a href="https://github.com/leahecole" target="_blank">@leahecole</a>) and <strong>Ry Walker</strong> (<a href="https://github.com/ryw" target="_blank">@ryw</a>) as new Airflow Committers.</p>
