Update asf-site to output generated at a21962a

--- a/announcements/index.html
+++ b/announcements/index.html
@@ -429,6 +429,10 @@ if (!doNotTrack) {
 
 <p><strong>Note:</strong> Follow <a href="https://twitter.com/ApacheAirflow" target="_blank">@ApacheAirflow</a> on Twitter for the latest news and announcements!</p>
 
+<h1 id="october-28-2020">October 28, 2020</h1>
+
+<p>Airflow PMC welcomes <strong>Ryan Hamilton</strong> (<a href="https://github.com/ryanahamilton" target="_blank">@ryanahamilton</a>) as the new Airflow Committer.</p>
+
 <h1 id="october-6-2020">October 6, 2020</h1>
 
 <p>We&rsquo;ve just released Airflow Backport Provider Packages 2020.10.5.</p>
