--- a/announcements/index.html
+++ b/announcements/index.html
@@ -429,6 +429,12 @@ if (!doNotTrack) {
 
 <p><strong>Note:</strong> Follow <a href="https://twitter.com/ApacheAirflow" target="_blank">@ApacheAirflow</a> on Twitter for the latest news and announcements!</p>
 
+<h1 id="november-2-2020">November 2, 2020</h1>
+
+<p>We&rsquo;ve just released Airflow Backport Provider Packages 2020.10.5.</p>
+
+<p><a href="https://dist.apache.org/repos/dist/release/airflow/backport-providers/" target="_blank">https://dist.apache.org/repos/dist/release/airflow/backport-providers/</a></p>
+
 <h1 id="october-28-2020">October 28, 2020</h1>
 
 <p>Airflow PMC welcomes <strong>Ryan Hamilton</strong> (<a href="https://github.com/ryanahamilton" target="_blank">@ryanahamilton</a>) as the new Airflow Committer.</p>
@@ -436,6 +442,8 @@ if (!doNotTrack) {
 <h1 id="october-6-2020">October 6, 2020</h1>
 
 <p>We&rsquo;ve just released Airflow Backport Provider Packages 2020.10.5.</p>
+
+<p><a href="https://dist.apache.org/repos/dist/release/airflow/backport-providers/" target="_blank">https://dist.apache.org/repos/dist/release/airflow/backport-providers/</a></p>
 
 <p>57 packages have been released.</p>
 
