--- a/ecosystem/index.html
+++ b/ecosystem/index.html
@@ -498,6 +498,8 @@ if (!doNotTrack) {
 
 <p><a href="https://github.com/godatadriven/whirl" target="_blank">whirl</a> - Fast iterative local development and testing of Apache Airflow workflows.</p>
 
+<p><a href="https://github.com/aelzeiny/airflow-aws-executors" target="_blank">airflow-aws-executors</a> - Run Airflow Tasks directly on AWS Batch, AWS Fargate, or AWS ECS; provisioning less infra is more.</p>
+
 
 
         </main>
