--- a/announcements/index.html
+++ b/announcements/index.html
@@ -429,6 +429,16 @@ if (!doNotTrack) {
 
 <p><strong>Note:</strong> Follow <a href="https://twitter.com/ApacheAirflow" target="_blank">@ApacheAirflow</a> on Twitter for the latest news and announcements!</p>
 
+<h1 id="november-25-2020">November 25, 2020</h1>
+
+<p>We&rsquo;ve just released Apache Airflow 1.10.13</p>
+
+<p>PyPI: <a href="https://pypi.org/project/apache-airflow/1.10.13" target="_blank">https://pypi.org/project/apache-airflow/1.10.13</a>
+Docs: <a href="https://airflow.readthedocs.io/en/1.10.13/" target="_blank">https://airflow.readthedocs.io/en/1.10.13/</a>
+Changelog: <a href="https://airflow.readthedocs.io/en/1.10.13/changelog.html" target="_blank">https://airflow.readthedocs.io/en/1.10.13/changelog.html</a></p>
+
+<p>405 commits since 1.10.12 (6 New Features, 31 Improvements, 30 Bug Fixes, and tons of doc changes and internal changes)</p>
+
 <h1 id="november-2-2020">November 2, 2020</h1>
 
 <p>We&rsquo;ve just released Airflow Backport Provider Packages 2020.10.5.</p>
